run linkding as non-root

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: linkding
 spec
   securitsContext:
-    runAsNonRoot: true:
+    runAsNonRoot: true
   replicas: 1 
   selector:
     matchLabels:
