--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: linkding
   namespace: linkding
-spec
+spec:
   securitsContext:
     runAsNonRoot: true
   replicas: 1 
