fixed errors in deployment.yaml

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -13,7 +13,7 @@ spec:
       labels:
         app: linkding
     spec:    
-      securitsContext:
+      securityContext:
         fsGroup: 33
         runAsUser: 33
         runAsGroup: 33
