--- a/apps/base/linkding/service.yaml
+++ b/apps/base/linkding/service.yaml
@@ -7,9 +7,9 @@ metadata:
     namespace: linkding
 spec:
   ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 9090
+    - protocol: TCP
+      port: 8080
+      targetPort: 9090
   selector:
     app: linkding
   type: LoadBalancer
