--- a/apps/base/linkding/service.yaml
+++ b/apps/base/linkding/service.yaml
@@ -1,15 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    labels:
-      app: linkding
-    name: linkding
-    namespace: linkding
+  name: linkding
 spec:
   ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 9090
+    - port: 9090
   selector:
     app: linkding
-  type: LoadBalancer
+  type: ClusterIP
