--- a/apps/staging/linkding/cloudflare.yaml
+++ b/apps/staging/linkding/cloudflare.yaml
@@ -75,8 +75,8 @@ data:
     # Serves the metrics server under /metrics and the readiness server under /ready
     metrics: 0.0.0.0:2000
     no-autoupdate: true
-
-behrlevi.orgostname: linkding.behrlevi.org
+    ingress:
+    - hostname: linkding.behrlevi.org
       service: http://linkding:9090
 
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
