cloudflare creds are now saved as an encrypted secret

--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
   - ../../base/linkding/
 #  - cloudflare.yaml
-  - test-secret.yaml
+#  - test-secret.yamli
+  - tunnel-credentials.yaml
