--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/linkding/
-#  - cloudflare.yaml
+  - cloudflare.yaml
 #  - test-secret.yamli
   - tunnel-credentials.yaml
