added superadmin user secret

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -27,6 +27,11 @@ spec:
               mountPath: /etc/linkding/data
           securityContext:
             allowPrivilegeEscalation: false
+          envFrom:
+#            - configMapRef:
+#                name: linkding-configmap
+            - secretRef:
+                name: linkding-containe-env
       volumes:
         - name: linkding-data
           persistentVolumeClaim:
