--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/linkding/
-  - cloudflare.yaml
+#  - cloudflare.yaml
 #  - test-secret.yamli
   - tunnel-credentials.yaml
   - linkding-container-env-secret.yaml
+  - ingress.yaml
