--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -1,9 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: linkding
 resources:
   - ../../base/linkding/
 #  - cloudflare.yaml
-#  - test-secret.yamli
+#  - test-secret.yaml
   - tunnel-credentials.yaml
   - linkding-container-env-secret.yaml
   - ingress.yaml
