feat: ingress for grafana

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -30,4 +30,11 @@ spec:
           kind: PrometheusRule
   values:
     grafana:
-      adminPassword: mischa
+      adminPassword: password
+    ingress:
+      enabled: truei
+      ingressClassName: nginx
+      hosts:
+        - grafana.behrlevi.org
+      paths: /
+
