--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -37,4 +37,8 @@ spec:
         hosts:
           - grafana.behrlevi.org
         paths: /
+        tls:
+          - secretName: grafana-tls-secret
+            hosts:
+              - grafana.behrlevi.org
 
