--- a/apps/base/linkding/kustomization.yaml
+++ b/apps/base/linkding/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - namespace.yaml
-  - volumeclaim.yaml
+#  - volumeclaim.yaml
   - service.yaml
