--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -31,7 +31,7 @@ spec:
 #            - configMapRef:
 #                name: linkding-configmap
             - secretRef:
-                name: linkding-containe-env
+                name: linkding-container-env
       volumes:
         - name: linkding-data
           persistentVolumeClaim:
