new app: audiobookshelf

--- a/apps/base/konyves/kustomization.yaml
+++ b/apps/base/konyves/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - namespace.yaml
-#  - volumeclaim.yaml
-#  - service.yaml
+  - volumeclaim.yaml
+  - service.yaml
+  - volume.yaml
