new app: audiobookshelf

--- a/apps/base/konyves/volumeclaim.yaml
+++ b/apps/base/konyves/volumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: konyves_pvc
+  name: konyves-data-pvc
   namespace: konyves
 spec:
   accessModes:
