--- a/apps/base/konyves/deployment.yaml
+++ b/apps/base/konyves/deployment.yaml
@@ -16,8 +16,12 @@ spec:
      containers:
         - name: konyves
           image: ghcr.io/advplyr/audiobookshelf:latest
-          ports:
-            - containerPort: 3005
+          env:
+            - name: PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: konyves-conf
+                  key: port
     volumes:
       - name: konyves-data
         persistentVolumeClaim:
