adding the config volume to konyves

--- a/apps/base/konyves/deployment.yaml
+++ b/apps/base/konyves/deployment.yaml
@@ -27,6 +27,6 @@ spec:
               mountPath: /config
 
     volumes:
-      - name: konyves-data
+      - name: config
         persistentVolumeClaim:
           claimName: konyves-data-pvc
