--- a/apps/base/konyves/volumeclaim.yaml
+++ b/apps/base/konyves/volumeclaim.yaml
@@ -1,7 +1,40 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: konyves-data-pvc
+  name: konyves-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: konyves-metadata
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: konyves-audiobooks
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: konyves-podcasts
 spec:
   accessModes:
     - ReadWriteOnce
