--- a/apps/base/thehive/kustomization.yaml
+++ b/apps/base/thehive/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - linkding
-  - konyves
-  - thehive
+  - namespace.yaml
+  - release.yaml
+  - repository.yaml
