--- a/apps/staging/thehive/gateway.yaml
+++ b/apps/staging/thehive/gateway.yaml
@@ -2,7 +2,8 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: thehive-gateway
-spec:
+spec
+  gatewayClassName: thehive-class 
   listeners:
   - name: http
     protocol: HTTP
