--- a/apps/staging/thehive/kustomization.yaml
+++ b/apps/staging/thehive/kustomization.yaml
@@ -4,4 +4,5 @@ namespace: thehive
 resources:
   - ../../base/thehive/
   - gateway.yaml
-  - httproute.yaml 
+  - httproute.yaml
+  - gatewayclass.yaml 
