configuring traeffik as the gateway controller

--- a/apps/staging/thehive/gatewayclass.yaml
+++ b/apps/staging/thehive/gatewayclass.yaml
@@ -3,5 +3,5 @@ kind: GatewayClass
 metadata:
   name: thehive-class
 spec:
-  controllerName: thehive.ddc.sze.hu/gateway-controller
+  controllerName: traefik.io/gateway-controller
 
