modified the port number of TheHive service, going to back Ingress to provision TheHive for now

--- a/apps/staging/thehive/gatewayclass.yaml
+++ b/apps/staging/thehive/gatewayclass.yaml
@@ -3,5 +3,5 @@ kind: GatewayClass
 metadata:
   name: thehive-class
 spec:
-  controllerName: traefik.io/gateway-controller
+  controllerName: gateway.envoyproxy.io/gateway-controller
 
