changed the container port for TheHive and reconfigured it's service

--- a/apps/base/thehive/service.yaml
+++ b/apps/base/thehive/service.yaml
@@ -5,7 +5,9 @@ metadata:
   namespace: thehive
 spec:
   ports:
-    - port: 9091
+    - port: 8091
+      targetPort: 8000
+      nodePort: 30000
   selector:
     app: thehive
-  type: ClusterIP
+  type: NodePort
