--- a/apps/staging/thehive/gatewayclass.yaml
+++ b/apps/staging/thehive/gatewayclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
-  name: thehive-class
+  name: envoy-gateway-class
 spec:
   controllerName: gateway.envoyproxy.io/gateway-controller
 
