--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -13,10 +13,10 @@ spec:
       labels:
         app: linkding
     spec:    
-      securityContext:
-        fsGroup: 33
-        runAsUser: 33
-        runAsGroup: 33
+#      securityContext:
+#        fsGroup: 33
+#        runAsUser: 33
+#        runAsGroup: 33
       containers:
         - name: linkding
           image: sissbruecker/linkding:1.1.0
